--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 <!--		&lt;!&ndash; https://mvnrepository.com/artifact/io.github.git-commit-id/git-commit-id-maven-plugin &ndash;&gt;-->
 <!--		<dependency>-->
 <!--			<groupId>io.github.git-commit-id</groupId>-->
